packages/ui-library/src/css/text.scss
.content-link {
    a {
        &.detached {
            display: inline-block;
            padding: 10px 0 10px 5px;
        }
        &.text-first {
            position: relative;
            .count,
            [class^='icon-'],
            [class*=' icon-'] {
                position: absolute;
                right: -30px;
            }
        }
        .count {
            color: $color-blue-grey;
            &:hover {
                text-decoration: none;
            }
        }
        [class^='icon-'],
        [class*=' icon-'] {
            color: $color-blue-grey;
            display: inline-block;
            &:hover {
                text-decoration: none;
            }
            &:before {
                display: inline-block;
            }
        }

        &.disabled {
            pointer-events: none;
            opacity: 0.4;
        }
    }
}

.content-halign-center {
    text-align: center;
}

.textblock {
    color: $color-elephant;
    font-size: 14px;
    margin: 0 0 10px;

    &:last-child {
        margin-bottom: 0;
    }
}

.textblock--primary {
    color: $color-slate;
    font-size: 15px;
}

.textblock--value {
    color: $color-midnight;
    font-size: 15px;
}

.pipe {
    &:before {
        content: '';
        height: 1.2em;
        width: 1px;
        margin: 0 $spacing-sm;
        display: inline-block;
        vertical-align: middle;
        background-color: $color-rabbit-fur;
    }
}

.masked-value {
    color: $color-midnight;
    font-size: 14px;

    &--masked {
        letter-spacing: 2px;
    }

    &__icon {
        color: $color-midnight;
        font-size: 11px;
        margin-left: $spacing-sm;
        vertical-align: middle;
        line-height: 11px;

        &:hover {
            text-decoration: none;
        }
    }

    &--masked &__icon {
        font-size: 20px;
    }
}

%value-text,
.value-text {
    color: $color-midnight;
    font-size: 14px;
}

